# monero-gtk

./: .gitignore  Cargo.toml
src/: account_actions.xml  app.ui  app.xml  main.rs
